fixed unwanted horizontal scrolling

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,12 +1,23 @@
 body {
     padding-top: 50px;
-    }
+    overflow-x: hidden;
+}
     
 html {
         scroll-behavior: smooth;
-    }
-    
- /*---------------------------scroll bar-------------------------*/
+}
+
+.no-gutters {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.row {
+    margin-left: -20px !important;
+    margin-right: -20px !important;
+}
+
+/*---------------------------scroll bar-------------------------*/
  
     ::-webkit-scrollbar {
   width: 10px;
@@ -75,8 +86,13 @@ html {
 }
 
 .bio-pic {
-    height: 230px;
+    width: 100%;
+    height: 344px;
 }
+
+/*#bio-pic-mickey {*/
+/*    height: 344px;*/
+/*}*/
 
 .info-xmas {
     margin-top :20px;
@@ -151,7 +167,7 @@ html {
 .info {
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 25px;
     margin-bottom: 20px;
 }
